--- a/Login/bin/AndroidManifest.xml
+++ b/Login/bin/AndroidManifest.xml
@@ -19,7 +19,9 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+    		android:configChanges="keyboardHidden|orientation|screenSize" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,6 +31,8 @@
         <activity
             android:name=".RegisterActivity"
             android:label="@string/title_activity_register"
+            android:screenOrientation="portrait"
+    		android:configChanges="keyboardHidden|orientation|screenSize"
             android:parentActivityName=".MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -37,6 +41,8 @@
         <activity
             android:name=".ProfileActivity"
             android:label="@string/title_activity_profile"
+            android:screenOrientation="portrait"
+    		android:configChanges="keyboardHidden|orientation|screenSize"
             android:parentActivityName=".MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -44,7 +50,15 @@
         </activity>
         <activity
             android:name=".WeatherActivity"
+            android:screenOrientation="portrait"
+    		android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_weather" >
+        </activity>
+        <activity
+            android:name=".ChangePasswordActivity"
+            android:screenOrientation="portrait"
+    		android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/title_activity_change_password" >
         </activity>
     </application>
 
